--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "flow-interfaces": "^0.6.0",
     "isparta-loader": "^2.0.0",
     "karma": "^0.13.21",
+    "karma-chrome-launcher": "^0.2.3",
     "karma-coverage": "^0.5.0",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^2.0.0",
